Fixed spacing issues on blocks in Indulge and Senses

--- a/assets/css/template-main-sm-1.css
+++ b/assets/css/template-main-sm-1.css
@@ -1424,7 +1424,7 @@ a.footerlink:hover,focus {
     }
 
     @media only screen and (max-width: 720px) {
-      .col-lg-8 {
+      .col-lg-8 .col-lg-6 {
         padding: 2.2em !important;
       }
     }
